# FleetPulse

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  Makefile  README.md  alembic.ini  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  delivery.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/web/: eslint.config.mjs  package.json
apps/worker/: __init__.py  celery_app.py  maintenance_tasks.py
docker/: api.Dockerfile  web.Dockerfile
docs/adr/: 0001-modular-monolith.md  0002-tenancy-and-transactions.md
docs/api/: authentication.md  inspections.md  maintenance.md  operations.md  vehicles.md  work-orders.md
migrations/: README  env.py
migrations/versions/: 20260714_0001_identity_and_tenancy.py  20260714_0002_vehicle_management.py  20260714_0003_inspection_safety_loop.py  20260714_0004_maintenance_schedules.py  20260714_0005_work_order_lifecycle.py
scripts/: seed_demo.py
src/fleetpulse/: __init__.py
tests/contract/: test_auth_api.py  test_defect_api.py  test_inspection_api.py  test_maintenance_api.py  test_operations_api.py  test_vehicle_api.py  test_work_order_api.py
tests/integration/: conftest.py  test_auth_service.py  test_inspection_workflow.py  test_maintenance_workflow.py  test_vehicle_service.py  test_work_order_workflow.py
tests/unit/: test_auth_security.py  test_config.py  test_demo_inspection_seed.py  test_health.py  test_identity_models.py  test_inspection_models.py  test_inspection_service.py  test_maintenance_models.py  test_rbac.py  (+6 more)
(+81 files in other folders)
